tests/paczka2/big_fuzzy/70301329.err
Error in line 10: 2FQEv1lKM A346 94,8
Error in line 16: 09xXDPg7j A346 308,04
Error in line 14: 2FQEv1lKM S791 19,8
Error in line 4: 09xXDPg7j A346 90,7
Error in line 12: jTa S791 12,0
Error in line 20: d0l A739 93,4
Error in line 28: OZcQ3t9 S652 49,1
Error in line 31: jTa A346 38,8
Error in line 35: 2FQEv1lKM A739 318,8
Error in line 42: jTa S791 84,5
Error in line 47: rEAhhEHaU S791 28,1
Error in line 60: A739 S791 26,1
Error in line 41: 09xXDPg7j A346 33,3
Error in line 71: 09xXDPg7j A739 34,5
Error in line 76: d0l S652 23,6
Error in line 66: 2FQEv1lKM S652 33,7
Error in line 80: 09xXDPg7j A346 374,0
Error in line 91: 2FQEv1lKM S652 61,1
Error in line 83: A739 S791 1,8
Error in line 93: jTa A739 44,2
Error in line 92: 2FQEv1lKM S791 51,0
Error in line 98: 2FQEv1lKM A739 76,0
Error in line 101: d0l A346 14,0
Error in line 103: d0l A739 78,0
Error in line 104: d0l A346 64,1
Error in line 118: 09xXDPg7j S791 44,6
Error in line 133: jTa A739 21,3
Error in line 135: jTa S652 26,9
Error in line 138: jTa S791 84,1
Error in line 137: rEAhhEHaU A739 5,2
Error in line 147: rEAhhEHaU S791 0,1
Error in line 148: rEAhhEHaU A346 37,1
Error in line 141: jTa S652 81,6
Error in line 153: jTa S791 69,6
Error in line 161: A739 A346 44,8
Error in line 166: jTa A739 61,0
Error in line 164: rEAhhEHaU A739 91,9
Error in line 162: d0l A739 22,4
Error in line 179: 09xXDPg7j A346 95,8
Error in line 192: rEAhhEHaU A346 93,8
Error in line 222: OZcQ3t9 A739 30,1
Error in line 223: OZcQ3t9 S791 81,3
Error in line 228: OZcQ3t9 A739 87,7
Error in line 239: A739 A346 1,60
